2003-11-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/nl.msg: Dutch messages from Arjen Markus [Patch 836368]
	* library/demos/widget: Added mechanism to support some l10n of
	the actual hotkeys used.

2003-11-04  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test:
	* tests/textWind.test: fix to rest of test suite problems
	reported in [Bug 833761].  This also has the nice effect 
	that many more tests are now run on Windows.
	
2003-11-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/widget (showCode,printCode): Added code to print
	the source code on Unix and Win, courtesy of Arjen Markus and the
	Wiki.  [Patch 835644]

2003-11-03  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c
	* tests/textDisp.test: test and fix to a panic reported in 
	[Bug 833627], with tkchat, and an unused variable [Bug 835010].
	Also fixes substantial parts of [Bug 833761]

2003-11-03  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/demos/widget, etc.: Made widget demos locate themselves
	independently of the main Tk library using the new global variable
	tk_demoDirectory.  [Patch 832691, adapted]

	* generic/tkTextDisp.c (TextGetScrollInfoObj): Stop complaints
	about signed vs. unsigned for the length of strings.

2003-11-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/msgs/nl.msg: Updated messages from Arjen Markus and
	Pascal Scheffers.  Thanks!  [Patch 820519]

2003-10-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkImgPhoto.c (ImgPhotoBlendComplexAlpha): OS X uses
	32bpp images internally always, so make use of the assumption.

2003-10-31  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.c
	* generic/tkTextIndex.c
	* generic/tkTextDisp.c
	* generic/tkTextWind.c
	* generic/tkTextImage.c
	* generic/tkTextTag.c
	* generic/tkTextMark.c
	* generic/tkTextBTree.c
	* generic/tkText.h         
	* doc/text.n
	* tests/text.test
	* tests/textDisp.test